[tool.poetry]
name = "NEW_BOOKSTORE"
version = "0.1.0"
description = "bookstore api"
authors = ["derekH13 <168042164+derekH13@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "bookstore" }]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
djangorestframework = "^3.15.2"
django-extensions = "^3.2.3"
django-debug-toolbar = "^4.4.6"
psycopg2-binary = "^2.9.10"
python-decouple = "^3.8"
factory-boy = "^3.3.1"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"
factory-boy = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
